# apps/api/tests/fixtures/openapi_contract_snapshot.json
@@ -2466,22 +2466,6 @@
       "422"
     ]
   },
-  "/matches/{match_id}/attempts": {
-    "GET": [
-      "200",
-      "422"
-    ],
-    "POST": [
-      "201",
-      "422"
-    ]
-  },
-  "/matches/{match_id}/attempts/{attempt_id}": {
-    "PATCH": [
-      "200",
-      "422"
-    ]
-  },
   "/matches/{match_id}/cancel-request": {
     "POST": [
       "200",
